gen-requestfrom/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gen-requestfrom-frontend
  namespace: infra
  labels:
    app: gen-requestfrom-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: gen-requestfrom-frontend
  template:
    metadata:
      labels:
        app: gen-requestfrom-frontend
      annotations:
        consul.hashicorp.com/connect-inject: "false"
    spec:
      serviceAccountName: gen-requestfrom-frontend
      dnsPolicy: ClusterFirst
      containers:
        - name: gen-requestfrom-frontend
          image: registry.registry.svc.cluster.local:5000/gen-requestfrom:9
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      restartPolicy: Always
