gen-requestfrom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gen-requestfrom-frontend
  namespace: infra
spec:
  selector:
    app: gen-requestfrom-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
